# llmops_kevin_bruno_mlo25

./: README.md  pyproject.toml
03_llm_intro/: llm_intro.ipynb
04_pydanticai_structured/: pydanticai_pydantic_model.ipynb  simulated_employees.csv  simulated_employees.md
06_pydanticai_fastapi_chatbot/: api.py  chat_agent.py  chat_eda.ipynb  data_models.py  frontend.py
07_mlflow_llm_judge/src/: data_cleaning.ipynb  email_extractor.ipynb  emails_cleaned.json  mlflow.db  prompt_creation.ipynb
09_lancedb/: constants.py  lancedb_basic.ipynb
09_lancedb/knowledge_base/animals_text.lance/_transactions/: 0-3cc202bb-5f26-47b7-8a49-7bf2b108f643.txn  1-6e799ec3-d2a1-45a0-a87f-1346672d1fb3.txn  2-0343cb2b-31c5-4c2b-ad29-d98eba9dd5d3.txn  3-fdd2eb10-54c6-430c-9e9b-ddda02dda534.txn  4-b9293eb5-e9e0-4fa5-85d2-1a3c7ebd7724.txn  5-6f58cf4d-fcdc-4722-a227-0b21085c5f4a.txn  6-97efa485-f94d-4bbc-b919-aac356887915.txn  7-fe53fc50-c465-4847-98fb-96743c070b21.txn  8-ff2b2750-6bfd-4120-8e6f-23f0c1e61214.txn
09_lancedb/knowledge_base/animals_text.lance/data/: 6142477e-cc52-4d97-b25b-4024062fe721.lance
exercises/exercise_0/: exercise_0.0.ipynb  exercise_0.1.ipynb  exercise_0.2.ipynb  exercise_0.3.ipynb  exercise_0.md
exercises/exercise_0/data/: student_text_1.txt  student_text_2.txt
exercises/exercise_0/markdown_exports/: job_ad_1.md  job_ad_2.md  job_ad_3.md
exercises/exercise_1/: agent.py  app.py  db.py  exercise_1.0.ipynb  exercise_1.1.ipynb  exercise_1.2.ipynb  mlflow.db  models.py  restaurants.duckdb  streamlit_app.py
(+12 files in other folders)
