[project]
name = "llmops-kevin-bruno-mlo25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "lancedb==0.17",
    "litellm>=1.83.0",
    "mlflow>=3.11",
    "pandas<3",
    "pydantic-ai>=1.77.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
